--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -18,7 +18,7 @@
 		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="Home.html">Home <span class="sr-only"></span></a>
+					<a class="nav-link" href="Index.html">Home <span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="MijnErvaringen.html">Mijn Ervaringen</a>
