--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item active">
-					<a class="nav-link" href="Index.html">Home <span class="sr-only"></span></a>
+					<a class="nav-link" href="Index.html">Index <span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="MijnErvaringen.html">Mijn Ervaringen</a>
