--- a/Contact.html
+++ b/Contact.html
@@ -3,12 +3,12 @@
 <meta charset="utf-8">
 <meta content="IE-edge" http-equiv="X-UA-Compatible">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>Contact</title>
+<title>Tijdlijn 🕒</title>
 <link rel="stylesheet" href="CSS/style.css">
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
-<link rel="stylesheet" href="CSS/form.css" >
+
+<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic'/>
 
 </head>
 <body class="light-theme">
@@ -20,7 +20,7 @@
 <div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item">
-					<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
+					</html><a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="MijnErvaringen.html">Mijn Ervaringen</a>
@@ -83,50 +83,65 @@
 
 	  </nav> 												<!--- Navbar End    -->		   
 	  <main>
-	  
-        <div class="container">
-            <div class="imagebg"></div>
-            <div class="container">
-                <div class="form-container z-depth-5">
-                    <h3>Contact Form</h3> 
-                    <div class="row">
-                        <form class="col s12" id="reused_form">
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="name" type="text" name="name" required class="validate">
-                                    <label for="name">Name</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <input id="email" type="email" name="email" required class="validate">
-                                    <label for="email">Email</label>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="input-field col s12">
-                                    <textarea id="message" name="message" class="materialize-textarea" class="validate" ></textarea>
-                                    <label for="message">Message</label>
-                                </div>
-                            </div>
-                            <div>
-                                <button class="waves-effect waves-light btn submitbtn" type="submit">Submit</button>
-                            </div>
-                        </form>
-                        <div id="error_message" style="width:100%; height:100%; display:none; ">
-                            <h4>
-                                Error
-                            </h4>
-                            Sorry there was an error sending your form. 
-                        </div>
-                        <div id="success_message" style="width:100%; height:100%; display:none; ">
-                            <h4>
-                                Success! Your Message was Sent Successfully.
-                            </h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
+		<div id="myDIV" style="display: none">
+			<div id="mydiv">
+				<div id="mydivheader">
+					<div class="cal-container">
+						<div class="cal-box">	
+							<form name="calculator">
+								<input id="display" type="text" name="display" placeholder="0" readonly>
+								<br>
+								<input class="button" type="button" value="7" onclick="calculator.display.value +='7'">
+								<input class="button" type="button" value="8" onclick="calculator.display.value +='8'">
+								<input class="button" type="button" value="9" onclick="calculator.display.value +='9'">
+								<input class="button mathbutton" type="button" value="+" onclick="calculator.display.value +='+'">
+								<br>
+								<input class="button" type="button" value="4" onclick="calculator.display.value +='4'">
+								<input class="button" type="button" value="5" onclick="calculator.display.value +='5'">
+								<input class="button" type="button" value="6" onclick="calculator.display.value +='6'">
+								<input class="button mathbutton" type="button" value="-" onclick="calculator.display.value +='-'">
+								<br>
+								<input class="button" type="button" value="1" onclick="calculator.display.value +='1'">
+								<input class="button" type="button" value="2" onclick="calculator.display.value +='2'">
+								<input class="button" type="button" value="3" onclick="calculator.display.value +='3'">
+								<input class="button mathbutton" type="button" value="x" onclick="calculator.display.value +='*'">
+								<br>
+								<input class="button clearButton" type="button" value="C"onclick="calculator.display.value =''">
+								<input class="button" type="button" value="0" onclick="calculator.display.value +='0'">
+								<input class="button mathbutton" type="button" value="=" onclick="calculator.display.value = eval(calculator.display.value)">
+								<input class="button mathbutton" type="button" value="/" onclick="calculator.display.value +='/'">
+								<br />
+							</form>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		  <div class="expando js-expando">
+			<div class="expando__inner js-expando-inner">
+			  <div class="expando__inner-inverter js-expando-inner-inverter">
+				<div class="expando__content js-content">
+				  <ul class="expando__content-list">
+					<li>  <button class="button1" onclick="myFunction()">🧮Calculator</button> </li>
+					<li>  Upcomming.. </button> </li>
+		
+				  </ul>
+		
+				  <button class="expando__close js-expando-collapse-btn">Close</button>
+				</div>
+		
+				<button class="expando__btn js-expando-expand-btn">
+					<div class="plusgroote">
+					<B>+</B>
+					</div>
+				  </button>
+			  </div>
+			</div>
+		  </div>  
+
+
+
 
 
 
@@ -146,16 +161,13 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="JS/form.js"></script>
+<script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
-
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>	
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
 
 </body>
-</html>
