--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <meta charset="utf-8">
 <meta content="IE-edge" http-equiv="X-UA-Compatible">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>Tijdlijn 🕒</title>
+<title>Contact 📝</title>
 <link rel="stylesheet" href="CSS/style.css">
 <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
