--- a/Contact.html
+++ b/Contact.html
@@ -148,7 +148,7 @@
 				<div class="col-md-7">
 				  <div class="form h-100 contact-wrap p-5">
 					<h3 class="text-center">Let's Talk</h3>
-					<form Action="badrkhaie@hotmail.com" METHOD="POST" ENCTYPE="text/plain">
+					<form action="http://formspree.io/badrkhaie@hotmail.com" method="post">
 					  <div class="row">
 						<div class="col-md-6 form-group mb-3">
 						  <label for="" class="col-form-label">Name *</label>
@@ -193,9 +193,7 @@
 		
 		  </div>
 		  
-			
-
-
+		 
 
 		 <footer> <!--footer--------------->
 			<!--heading-->
