--- a/Contact.html
+++ b/Contact.html
@@ -192,7 +192,24 @@
 			</div>
 		
 		  </div>
-		  
+		  <form style="margin-left: 6%;" class="email" action="https://www.enformed.io/YOUR_TOKEN" method="post">
+			<p>Name:</p>
+			<input type="text" name="first_name" />
+			<div id="margin" style="height: 0.5%;"></div>
+			<p>E-mail:</p>
+			<div id="margin" style="height: 0.5%;"></div>
+			<input type="text" name="email" />
+			<div id="margin" style="height: 0.5%;"></div>
+			<p>Subject:</p>
+			<div id="margin" style="height: 0.5%;"></div>
+			<input type="text" name="subject" />
+			<div id="margin" style="height: 0.5%;"></div>
+			<p>Message:</p>
+			<div id="margin" style="height: 0.5%;"></div>
+			<textarea name="message"></textarea>
+			<div id="margin" style="height: 0.5%;"></div>
+			<button type="submit" class="btn btn-default">Submit Form</button>
+		  </form>
 		 
 
 		 <footer> <!--footer--------------->
