--- a/Contact.html
+++ b/Contact.html
@@ -192,7 +192,7 @@
 			</div>
 		
 		  </div>
-		  <form style="margin-left: 6%;" class="email" action="https://www.enformed.io/YOUR_TOKEN" method="post">
+		  <form style="margin-left: 6%;" class="email" action="https://www.enformed.io/badrkhaie@hotmail.com" method="post">
 			<p>Name:</p>
 			<input type="text" name="first_name" />
 			<div id="margin" style="height: 0.5%;"></div>
