--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -138,6 +138,51 @@
 			</div>
 		  </div>
 <!--model---------------------->
+<div class="row">
+	<div class="col-sm-2">
+		<div class="poem">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="col-sm-2">
+		<div class="poem">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="col-sm-2">
+		<div class="poem">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+</div>
+
+
+
+		
+
+
+
 
 
 
