--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -139,8 +139,8 @@
 		  </div>
 <!--model---------------------->
 <div class="row">
-	<div class="col-sm-2">
-		<div class="poem">
+	<div class="col-md-5">
+		<div class="cardwork">
 			<figure>
 			<p>Turn back the clock</p>
 				<figcaption>
@@ -151,8 +151,8 @@
 			</figure>
 		</div>
 	</div>
-	<div class="col-sm-2">
-		<div class="poem">
+	<div class="col-md-5">
+		<div class="cardwork">
 			<figure>
 			<p>Turn back the clock</p>
 				<figcaption>
@@ -163,8 +163,74 @@
 			</figure>
 		</div>
 	</div>
-	<div class="col-sm-2">
-		<div class="poem">
+</div>
+<div class="row">
+	<div class="col-md-5">
+		<div class="cardwork">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="col-md-5">
+		<div class="cardwork">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-5">
+		<div class="cardwork">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="col-md-5">
+		<div class="cardwork">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+</div>
+<div class="row">
+	<div class="col-md-5">
+		<div class="cardwork">
+			<figure>
+			<p>Turn back the clock</p>
+				<figcaption>
+				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+				<br>
+				<div class="author">― David Harris</div>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
+	<div class="col-md-5">
+		<div class="cardwork">
 			<figure>
 			<p>Turn back the clock</p>
 				<figcaption>
