--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -8,6 +8,9 @@
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
+		<link rel="stylesheet" href="css/style2.css">
 	</head>
 <body class="light-theme">
 	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
@@ -138,111 +141,134 @@
 			</div>
 		  </div>
 <!--model---------------------->
-<div class="row">
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
+<section class="ftco-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h2 class="heading-section mb-5 pb-md-4">Carousel #02</h2>
+			</div>
+			<div class="col-md-12">
+				<div class="featured-carousel owl-carousel">
+					<div class="item">
+						<div class="work">
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 01</a></h3>
+								<span>Web Design</span>
+								</div>	
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>
+																	
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 02</a></h3>
+								<span>Web Design</span>
+							</div>
+							</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 03</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 04</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>								
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 05</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 06</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-</div>
-<div class="row">
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-	<div class="col-md-5">
-		<div class="cardwork">
-			<figure>
-			<p>Turn back the clock</p>
-				<figcaption>
-				Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-				<br>
-				<div class="author">― David Harris</div>
-				</figcaption>
-			</figure>
-		</div>
-	</div>
-</div>
-
+</section>
 
 
 		
@@ -269,7 +295,9 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-		
+		<script src="js/jquery.min.js"></script>
+		<script src="js/owl.carousel.min.js"></script>
+		<script src="js/main.js"></script>		
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
