--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -10,7 +10,6 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
 		<link rel="stylesheet" href="css/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
-		<link rel="stylesheet" href="css/style2.css">
 	</head>
 <body class="light-theme">
 	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
@@ -145,7 +144,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2 class="heading-section mb-5 pb-md-4">Carousel #02</h2>
+				<h2 class="heading-section mb-5 pb-md-4">Werkervaring</h2>
 			</div>
 			<div class="col-md-12">
 				<div class="featured-carousel owl-carousel">
@@ -153,7 +152,7 @@
 						<div class="work">
 								<div class="cardwork">
 									<figure>
-									<p>Turn back the clock</p>
+									<p>Hagaziekenhuis</p>
 										<figcaption>
 										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
 										<br>
