--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 	
-		<link rel="stylesheet" href="css/owl.carousel.min.css">
+		<link rel="stylesheet" href="./css/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
 	</head>
 <body class="light-theme">
