--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -139,6 +139,135 @@
 			</div>
 		  </div>
 <!--model---------------------->
+<section class="ftco-section">
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12 text-center">
+				<h2 class="heading-section mb-5 pb-md-4">Werkervaring</h2>
+			</div>
+			<div class="col-md-12">
+				<div class="featured-carousel owl-carousel">
+					<div class="item">
+						<div class="work">
+								<div class="cardwork">
+									<figure>
+									<p>Hagaziekenhuis</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 01</a></h3>
+								<span>Web Design</span>
+								</div>	
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>
+																	
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 02</a></h3>
+								<span>Web Design</span>
+							</div>
+							</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 03</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 04</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>								
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 05</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="work">									
+								<div class="cardwork">
+									<figure>
+									<p>Turn back the clock</p>
+										<figcaption>
+										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										<br>
+										<div class="author">― David Harris</div>
+										</figcaption>
+									</figure>									
+							<div class="text pt-3 w-100 text-center">
+								<h3><a href="#">Work 06</a></h3>
+								<span>Web Design</span>
+							</div>	
+						</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+
 
 		
 
