--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -4,13 +4,14 @@
 		<meta content="IE-edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<title>Mijn ervaring</title>
-		<link rel="stylesheet" href="./css/style.css">
-		<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="./css/owl.carousel.min.css">
-		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">		
+		<link rel="stylesheet" href="CSS/style.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+	
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
 	</head>
-	<body class="light-theme">
+<body class="light-theme">
 	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
 		<a class="navbar-brand" href="#">Portofolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +24,7 @@
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="MijnErvaringen.html">Mijn Ervaringen</a>
-				</li>
+					</li>
 				<li class="nav-item">
 					<a class="nav-link" href="Tijdlijn.html">Tijdlijn</a>
 				</li>
@@ -79,16 +80,17 @@
 			</ul>
 
 </div>
+
 	  </nav> 												<!--- Navbar End    -->		   
 	  <main>
-	<div id="toggle" style="display: none">
-		<div class="draggable"  >
-			<div class="draggableheader">
+<div id="toggle" style="display: none">
+	<div class="draggable"  >
+		<div class="draggableheader">
 			<div class="cal-container">
 				<div class="cal-box">	
 					<form name="calculator">
 						<input id="display" type="text" name="display" placeholder="0" readonly>
-					<br />
+					<br>
 						<input class="button" type="button" value="7" onclick="calculator.display.value +='7'">
 						<input class="button" type="button" value="8" onclick="calculator.display.value +='8'">
 						<input class="button" type="button" value="9" onclick="calculator.display.value +='9'">
@@ -293,11 +295,11 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-<script src="./js/jquery.min.js"></script>
-<script src="./js/owl.carousel.min.js"></script>
-<script src="./js/main.js"></script>		
-<script src="./js/expando.js"></script>
-<script src="./js/dark.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/owl.carousel.min.js"></script>
+		<script src="js/main.js"></script>		
+<script src="JS/expando.js"></script>
+<script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
