--- a/Tijdlijn.html
+++ b/Tijdlijn.html
@@ -124,7 +124,7 @@
 			  <div class="expando__inner-inverter js-expando-inner-inverter">
 				<div class="expando__content js-content">
 				  <ul class="expando__content-list">
-					<li>  <button class="button1" onclick="myFunction()">🧮Calculator</button> </li>
+					<li>  <button class="button1" onclick="openCalculator()">🧮Calculator</button> </li>
 					<li>  Upcomming.. </button> </li>
 		
 				  </ul>
