--- a/Contact.html
+++ b/Contact.html
@@ -4,8 +4,8 @@
 <meta content="IE-edge" http-equiv="X-UA-Compatible">
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
 <title>Contact 📝</title>
-<link rel="stylesheet" href="CSS/style.css">
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+<link rel="stylesheet" href="./css/style.css">
+<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600,600italic,700,700italic'/>
@@ -229,11 +229,11 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-<script src="JS/expando.js"></script>
-<script src="JS/dark.js"></script>
+<script src="./js/expando.js"></script>
+<script src="./js/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="JS/ervaring.js"></script>
+<script src="./js/ervaring.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>	
 <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 <script crossorigin="anonymous" src="https://kit.fontawesome.com/c8e4d183c2.js"></script> <!--Custom Font awesome-->
