--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -4,11 +4,11 @@
 		<meta content="IE-edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
 		<title>Mijn ervaring</title>
-		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
 	
-		<link rel="stylesheet" href="./css/owl.carousel.min.css">
+		<link rel="stylesheet" href="css/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
 	</head>
 <body class="light-theme">
@@ -298,8 +298,8 @@
 		<script src="./js/jquery.min.js"></script>
 		<script src="./js/owl.carousel.min.js"></script>
 		<script src="./js/main.js"></script>		
-<script src="./js/expando.js"></script>
-<script src="./js/dark.js"></script>
+<script src="js/expando.js"></script>
+<script src="js/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
