--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -295,9 +295,9 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-		<script src="./js/jquery.min.js"></script>
-		<script src="./js/owl.carousel.min.js"></script>
-		<script src="./js/main.js"></script>		
+		<script src="js/jquery.min.js"></script>
+		<script src="js/owl.carousel.min.js"></script>
+		<script src="js/main.js"></script>		
 <script src="js/expando.js"></script>
 <script src="js/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
