--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -7,7 +7,6 @@
 		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-	
 		<link rel="stylesheet" href="css/owl.carousel.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
 	</head>
@@ -295,9 +294,9 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
-		<script src="./js/jquery.min.js"></script>
-		<script src="./js/owl.carousel.min.js"></script>
-		<script src="./js/main.js"></script>		
+<script src="js/jquery.min.js"></script>
+<script src="js/owl.carousel.min.js"></script>
+<script src="js/main.js"></script>		
 <script src="js/expando.js"></script>
 <script src="js/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
