--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -1,23 +1,22 @@
-<html lang="en">
-<head>
-<meta charset="utf-8">
-<meta content="IE-edge" http-equiv="X-UA-Compatible">
-<meta content="width=device-width, initial-scale=1.0" name="viewport">
-<title>Home</title>
-<link rel="stylesheet" href="CSS/style.css">
-<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/regular.min.js"/>
-
-
-</head>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<meta content="IE-edge" http-equiv="X-UA-Compatible">
+		<meta content="width=device-width, initial-scale=1.0" name="viewport">
+		<title>Mijn ervaring</title>
+		<link rel="stylesheet" href="CSS/style.css">
+		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
+		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="CSS/owl.carousel.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/4.5.6/css/ionicons.min.css">
+	</head>
 <body class="light-theme">
 	<nav class="navbar navbar-expand-lg navbar-dark" >  <!--- Navbar     -->
-		<a class="navbar-brand" >Portofolio</a>
+		<a class="navbar-brand" href="#">Portofolio</a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 		  <span class="navbar-toggler-icon"></span>
 		</button>
-<div class="collapse navbar-collapse" id="navbarText">
+		<div class="collapse navbar-collapse" id="navbarText">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 				<li class="nav-item">
 					<a class="nav-link" href="index.html">Home <span class="sr-only"></span></a>
@@ -76,32 +75,13 @@
 				  </div>
 			</ul>
 
-</div>
-
-	  </nav> 												<!--- Navbar End   . -->		   
-<main>
-<!--Expand button---------------->
-<div class="expando js-expando">
-	<div class="expando__inner js-expando-inner">
-		<div class="expando__inner-inverter js-expando-inner-inverter">
-			<div class="expando__content js-content">
-				<ul class="expando__content-list">
-					<li>  <button class="button1" onclick="openCalculator()">🧮Calculator</button> </li>
-					<li>  Upcomming.. </button> </li>
-				</ul>
-				<button class="expando__close js-expando-collapse-btn">Close</button>
-			</div>
-				<button class="expando__btn js-expando-expand-btn">
-				<div class="plusgroote">
-				<B>+</B>
-				</div>
-				</button>
 		</div>
-	</div>
-</div>
-<!--Expand button-----END----------->
+			</ul>
 
-<!--Expand Calculator-------------->
+</div>
+
+	  </nav> 												<!--- Navbar End    -->		   
+	  <main>
 <div id="toggle" style="display: none">
 	<div class="draggable"  >
 		<div class="draggableheader">
@@ -136,18 +116,30 @@
 		</div>
 	</div>
 </div>
-
-<!--Expand Calculator-------END------->
-
-
-<!--Expand Tiktak-------------->
-
-
-
-<!--Expand Tiktak-------END------->
-
-
-
+		
+		
+		  <div class="expando js-expando">
+			<div class="expando__inner js-expando-inner">
+			  <div class="expando__inner-inverter js-expando-inner-inverter">
+				<div class="expando__content js-content">
+				  <ul class="expando__content-list">
+					<li>  <button class="button1" onclick="openCalculator()">🧮Calculator</button> </li>
+					<li>  Upcomming.. </button> </li>
+		
+				  </ul>
+		
+				  <button class="expando__close js-expando-collapse-btn">Close</button>
+				</div>
+		
+				<button class="expando__btn js-expando-expand-btn">
+					<div class="plusgroote">
+					<B>+</B>
+					</div>
+				  </button>
+			  </div>
+			</div>
+		  </div>
+<!--model---------------------->
 <section class="ftco-section">
 	<div class="container">
 		<div class="row">
@@ -278,6 +270,10 @@
 </section>
 
 
+		
+
+
+
 
 
 
@@ -298,6 +294,9 @@
 			<p class="copyright">Butter since 1998 ©</p>
 		 </footer> <!--footer end --------------->
 		</main>
+<script src="JS/jquery.min.js"></script>
+<script src="JS/owl.carousel.min.js"></script>
+<script src="JS/main.js"></script>		
 <script src="JS/expando.js"></script>
 <script src="JS/dark.js"></script>
 <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" data-auto-replace-svg="nest"></script>
@@ -309,5 +308,3 @@
 
 </body>
 </html>
-
-
