mijn ervaring updated

--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -140,6 +140,51 @@
 			</div>
 		  </div>
 <!--model---------------------->
+<section>
+	<div class="dropdown">
+		<h1>
+		Ervaring
+		</h1>
+		<details>
+		<summary><b>Flexmedewerker</b></summary>
+		<small>Text</small>
+		<p>
+		Omschrijving
+		</p>
+		</details>
+		<details>
+		<summary>Stagiair Systeembeheerder</summary>
+		<p>
+		Omschrijving
+		</p>
+		</details>
+		<details>
+		<summary>Stagiair Systeembeheerder</summary>
+		<p>
+		Omschrijving
+		</p>
+		</details>
+		<details>
+		<summary>Werk</summary>
+		<p>
+		Omschrijving
+		</p>
+		</details>
+		<details>
+		<summary>Werk</summary>
+		<p>
+		Omschrijving
+		</p>
+		</details>
+		<details>
+		<summary>Werk</summary>
+		<p>
+		Omschrijving
+		</p>
+		</details>
+	</div>
+  </section>
+
 <section class="ftco-section">
 	<div class="container">
 		<div class="row">
