Updated Mijn ervaringen

--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -143,53 +143,129 @@
 <section>
 	<div class="dropdown">
 		<h1>
-		Ervaring
+		Ervaringen
 		</h1>
-		<details>
-		<summary><b>Flexmedewerker</b></summary>
-		<small>Text</small>
-		<p>
-		Omschrijving
+		<details id="details">   <!--Hagaziekenhuis-->
+		<summary><b>Hagaziekenhuis</b></summary>
+		<small>jul. 2016 - heden . 5 jaar <br /> Leyweg en omgeving, Den Haag</small>
+		<p> 
+		<b>Werknemer Ziekenhuis</b> <br /> Flexmedewerker: 
+		<ul>
+			<li>Huishoud</li>
+			<li>Sainitaire onderhoud</li>
+			<li>Medewerker assistent</li>
+		</ul>
 		</p>
 		</details>
-		<details>
-		<summary>Stagiair Systeembeheerder</summary>
-		<p>
-		Omschrijving
+		<details id="details"> <!--Vabi-->
+		<summary><b>Vabi</b></summary>
+		<small>feb. 2019 - jan. 2020 . 1 jaar <br /> Brasserskade en omgeving, Delft</small>
+		<p> 
+		<b>Stagiair Systeembeheerder</b> <br /> Medwerker Beheer ICT: 
+		<ul>
+			<li>Installeren en onderhouden van hardware, software en verbindingen</li>
+			<li>Behandelen van incidentmeldingen</li>
+			<li>Opstellen van instructies</li>
+			<li>Mondeling toelichting geven aan gebruikers</li>
+		</ul>
 		</p>
 		</details>
-		<details>
-		<summary>Stagiair Systeembeheerder</summary>
-		<p>
-		Omschrijving
+		<details id="details"> <!--Multimavision-->
+		<summary><b>Multimavision</b></summary>
+		<small>sep. 2016 - mrt. 2017 . 7 maanden <br /> Wateringen en omgeving, Den Haag</small>
+		<p> 
+		<b>Stagiair systeembeheerder</b> <br /> Medewerker beheer ICT: 
+		<ul>
+			<li>Assembleren & Demonteren</li>
+			<li>Software Installaties</li>
+			<li>Computer Reparaties</li>
+			<li>Sales</li>
+			<li>Ondersteuning verlenen aan medewerkers</li>
+		</ul>
 		</p>
 		</details>
-		<details>
-		<summary>Werk</summary>
-		<p>
-		Omschrijving
+		<details id="details"> <!--Basecom-->
+		<summary><b>Basecom</b></summary> 
+		<small>apr. 2015 - jul. 2016 . 1 jaar 4 maanden <br /> Zuiderpark en omgeving, Den Haag</small>
+		<p> 
+		<b>Stagiair ICT medewerker</b> <br /> Medewerker ICT: 
+		<ul>
+			<li>Computers onderhouden</li>
+			<li>Reparaties (APK)</li>
+			<li>Klantenservice</li>
+		</ul>
 		</p>
 		</details>
-		<details>
-		<summary>Werk</summary>
-		<p>
-		Omschrijving
+		<details id="details"> <!--Hema-->
+		<summary><b>Hema</b></summary> 
+		<small>Jul. 2014 jul. 2016 . 2 jaar en 1 maand <br /> Scheveningen + leyweg en omgeving, Den Haag</small>
+		<p> 
+		<b>Winkel Verkoper</b> <br /> Flexmedewerker: 
+		<ul>
+			<li>Kassa</li>
+			<li>Keuken</li>
+			<li>Magazijn</li>
+		</ul>
 		</p>
 		</details>
-		<details>
-		<summary>Werk</summary>
-		<p>
-		Omschrijving
+		<details id="details"> <!--Vloerenonlinevoordeel-->
+		<summary><b>Vloerenonlinevoordeel.nl</b></summary>
+		<small>okt. 2014 nov. 2014 . 2 maanden <br /> Pijnacker en omgeving, Nootdorp</small>
+		<p> 
+		<b>Stagiair ICT medewerker</b> <br /> Medewerker ICT: 
+		<ul>
+			<li>Website onderhouden</li>
+			<li>Advertenties plaatsen</li>
+		</ul>
+		</p>
+		</details>
+		<details id="details"> <!--Albertheijn-->
+		<summary><b>Albertheijn</b></summary>
+		<small>feb. 2014 jul. 2014 . 6 maanden <br /> Escamp en omgeving, Den Haag</small>
+		<p> 
+		<b>Winkel Verkoper</b> <br /> Medewerker Vakkenvuller: 
+		<ul>
+			<li>vakkenvullen</li>
+		</ul>
+		</p>
+		</details>
+		<details id="details"> <!--J.C.K Electrotechniek-->
+			<summary><b>J.C.K Electrotechniek</b></summary>
+			<small>feb. 2014 jun. 2014 . 5 maanden <br /> Escamp en omgeving, Den Haag</small>
+			<p> 
+			<b>Stagiair Electrotechniek</b> <br /> Medewerker Elektricien: 
+			<ul>
+				<li>Kabels trekken</li>
+				<li>Inspecties Uitvoeren</li>
+				<li>Kabelgoten Monteren</li>
+			</ul>
+			</p>
+			</details>
+		<details id="details"> <!--stichting MOOI-->
+		<summary><b>Stichting MOOI</b></summary>
+		<small>jan. 2013 jun. 2013 . 6 maanden <br /> Escamp en omgeving, Den Haag</small>
+		<p> 
+		<b>Stagiair Stichting</b> <br /> Medewerker Jongerwerk: 
+		<ul>
+			<li>Activiteitenbegeleider</li>
+			<li>huiswerkbegeleider</li>
+		</ul>
 		</p>
 		</details>
 	</div>
   </section>
 
+  
+	
+	
+	
+	
+
 <section class="ftco-section">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 text-center">
-				<h2 class="heading-section mb-5 pb-md-4">Werkervaring</h2>
+				<h1>Momenten</h1>
 			</div>
 			<div class="col-md-12">
 				<div class="featured-carousel owl-carousel">
@@ -205,7 +281,7 @@
 										</figcaption>
 									</figure>									
 							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Work 01</a></h3>
+								<h3><a href="#">Moment 01</a></h3>
 								<span>Web Design</span>
 								</div>	
 								</a>
@@ -225,7 +301,7 @@
 									</figure>
 																	
 							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Work 02</a></h3>
+								<h3><a href="#">Moment 02</a></h3>
 								<span>Web Design</span>
 							</div>
 							</a>
@@ -244,7 +320,7 @@
 										</figcaption>
 									</figure>									
 							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Work 03</a></h3>
+								<h3><a href="#">Moment 03</a></h3>
 								<span>Web Design</span>
 							</div>	
 						</a>
@@ -263,7 +339,7 @@
 										</figcaption>
 									</figure>									
 							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Work 04</a></h3>
+								<h3><a href="#">Moment 04</a></h3>
 								<span>Web Design</span>
 							</div>	
 						</a>
@@ -282,7 +358,7 @@
 										</figcaption>
 									</figure>								
 							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Work 05</a></h3>
+								<h3><a href="#">Moment 05</a></h3>
 								<span>Web Design</span>
 							</div>	
 						</a>
@@ -301,7 +377,7 @@
 										</figcaption>
 									</figure>									
 							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Work 06</a></h3>
+								<h3><a href="#">Moment 06</a></h3>
 								<span>Web Design</span>
 							</div>	
 						</a>
