--- a/MijnErvaringen.html
+++ b/MijnErvaringen.html
@@ -269,15 +269,15 @@
 			</div>
 			<div class="col-md-12">
 				<div class="featured-carousel owl-carousel">
-					<div class="item">
+					<div class="item"> 
 						<div class="work">
 								<div class="cardwork">
-									<figure>
+									<figure img>
 									<p>Hagaziekenhuis</p>
 										<figcaption>
-										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
+										Ergens in 2018 had ik mijn grote teen gebroken. <br>
+										Tijdens het tillen van een apparaat schoot het blok van 25kg los op mijn teen. 
 										<br>
-										<div class="author">― David Harris</div>
 										</figcaption>
 									</figure>									
 							<div class="text pt-3 w-100 text-center">
@@ -359,25 +359,6 @@
 									</figure>								
 							<div class="text pt-3 w-100 text-center">
 								<h3><a href="#">Moment 05</a></h3>
-								<span>Web Design</span>
-							</div>	
-						</a>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="work">									
-								<div class="cardwork">
-									<figure>
-									<p>Turn back the clock</p>
-										<figcaption>
-										Sometimes we have to<br> turn back the clock<br> to face our fears.<br> Search back through our memories<br> to find out how and when they began.<br> Look deep within our soul<br> for the answers that we seek.<br> Locate the source of our torment<br>			to eradicate it complete.<br> Our fears began somewhere<br> and the only way to find out where and when<br> is to turn back the clock.
-										<br>
-										<div class="author">― David Harris</div>
-										</figcaption>
-									</figure>									
-							<div class="text pt-3 w-100 text-center">
-								<h3><a href="#">Moment 06</a></h3>
 								<span>Web Design</span>
 							</div>	
 						</a>
